[project]
name = "pyscm"
version = "1.1.3"
description = "pySCM: The Set Covering Machine in Python"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["setuptools", "wheel", "numpy<2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "numpy<2",
    "scikit-learn>=1.7.1",
    "six>=1.17.0",
]
